automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,6 +4,7 @@
     <li>
       <h3><%= product.name %></h3>
       <p><%= truncate product.description %></p>
+      <button class="js-more" data-id="<%= product.id %>">More Info</button>
     </li>
   <% end %>
 </ul>
