automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,3 +8,21 @@
     </li>
   <% end %>
 </ul>
+
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+
+    var id = $(this).data("id");
+
+    $.get("/products/" + id + "/description", function(data) {
+      alert(data);
+    });
+
+    $.get("/products/" + id + "/inventory", function(data) {
+      alert(data);
+    });
+
+  });
+});
+</script>
