automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@ $(function () {
     var id = $(this).data("id");
 
     $.get("/products/" + id + "/description", function(data) {
-      alert(data);
+      //alert(data);
     });
 
     $.get("/products/" + id + "/inventory", function(data) {
