--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@ $(function () {
     });
 
     $.get("/products/" + id + "/inventory", function(data) {
-      if (data == "true") {
+      if (data === "true") {
         $(this).before("<p>Available</p>");
       } else {
         $(this).before("<p>Sold Out</p>");
