--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,32 @@
+<h1>Products</h1>
+<ul>
+  <% @products.each do |product| %>
+    <li>
+      <h3><%= product.name %></h3>
+      <p id="product-<%= product.id %>"><%= truncate product.description %></p>
+      <button class="js-more" data-id="<%= product.id %>">More Info</button>
+    </li>
+  <% end %>
+</ul>
 
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+
+    var id = $(this).data("id");
+
+    $.get("/products/" + id + "/description", function(data) {
+      $("#product-" + id).text(data);
+    });
+
+    $.get("/products/" + id + "/inventory", function(data) {
+      if (data === "true") {
+        $("#product-" + id).after("<p>Available</p>");
+      } else {
+        $("#product-" + id).after("<p>Sold Out</p>");
+      }
+    });
+
+  });
+});
+</script>
